# telebot-mtproto

./: .gitignore  LICENSE  README.md  config.py  database.py  main.py  pyproject.toml
nas/: Dockerfile  app.py  docker-compose.yml  requirements.txt
nas/templates/: index.html
telebot_mtproto/: __init__.py  bot.py  types.py
